# vetuste_scripteur

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
